// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test select example 1`] = `
"<div class="app-type">基本使用</div>
<div class="pb">
  <div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
      <div class="var-input-box__controller">
        <div class="var-input-box__icon"></div>
        <div class="var-input-box__wrap">
          <div class="var-select__wrap">
            <div class="var-menu var-select__menu" var-select-cover="">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div>
              <!--teleport start-->
              <!--teleport end-->
            </div>
          </div>
          <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-box__line">
        <div class="var-input-box__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-box var-input-box--outlined var--box var-select"><label class="var--relative var--block" for="">
      <div class="var-input-box__controller">
        <div class="var-input-box__icon"></div>
        <div class="var-input-box__wrap">
          <div class="var-select__wrap">
            <div class="var-menu var-select__menu" var-select-cover="">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div>
              <!--teleport start-->
              <!--teleport end-->
            </div>
          </div>
          <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-box__line">
        <div class="var-input-box__line__start"></div>
        <div class="var-input-box__line__notch">
          <div class="var--ellipsis var-input-box__line__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__line__end"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type">小尺寸</div>
<div class="pb">
  <div class="var-input-box var-input-box--standard var-input-box--small var--box var-select"><label class="var--relative var--block" for="">
      <div class="var-input-box__controller">
        <div class="var-input-box__icon"></div>
        <div class="var-input-box__wrap">
          <div class="var-select__wrap">
            <div class="var-menu var-select__menu" var-select-cover="">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div>
              <!--teleport start-->
              <!--teleport end-->
            </div>
          </div>
          <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-box__line">
        <div class="var-input-box__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-box var-input-box--outlined var-input-box--small var--box var-select"><label class="var--relative var--block" for="">
      <div class="var-input-box__controller">
        <div class="var-input-box__icon"></div>
        <div class="var-input-box__wrap">
          <div class="var-select__wrap">
            <div class="var-menu var-select__menu" var-select-cover="">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div>
              <!--teleport start-->
              <!--teleport end-->
            </div>
          </div>
          <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-box__line">
        <div class="var-input-box__line__start"></div>
        <div class="var-input-box__line__notch">
          <div class="var--ellipsis var-input-box__line__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__line__end"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type">朴素模式</div>
<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon var-input-box--non-hint"></div>
      <div class="var-input-box__wrap var-input-box--wrap-non-hint">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder var-input-box--placeholder-non-hint">请选择一个选项</div>
      </div>
      <div class="var-input-box__icon var-input-box--non-hint">
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">文本关联值</div>
<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="relation">当前选择的是: </div>
<div class="app-type">禁用</div>
<div class="var-input-box var-input-box--standard var--box var-input-box--disabled var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller var-input-box--disabled">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select var-select--disabled" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box--disabled var-input-box__placeholder">请选择一个选项</div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line var-input-box--line-disabled">
      <div class="var-input-box__dot var-input-box--line-disabled"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">只读</div>
<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">可清除</div>
<div class="pb">
  <div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
      <div class="var-input-box__controller">
        <div class="var-input-box__icon"></div>
        <div class="var-input-box__wrap">
          <div class="var-select__wrap">
            <div class="var-menu var-select__menu" var-select-cover="">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div>
              <!--teleport start-->
              <!--teleport end-->
            </div>
          </div>
          <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-box__line">
        <div class="var-input-box__dot"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="pb">
  <div class="var-input-box var-input-box--outlined var--box var-select"><label class="var--relative var--block" for="">
      <div class="var-input-box__controller">
        <div class="var-input-box__icon"></div>
        <div class="var-input-box__wrap">
          <div class="var-select__wrap">
            <div class="var-menu var-select__menu" var-select-cover="">
              <div class="var-select__select" style="text-align: left;">
                <div class="var-select__label">
                  <!--v-if-->
                </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
              </div>
              <!--teleport start-->
              <!--teleport end-->
            </div>
          </div>
          <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-input-box__line">
        <div class="var-input-box__line__start"></div>
        <div class="var-input-box__line__notch">
          <div class="var--ellipsis var-input-box__line__placeholder">请选择一个选项</div>
        </div>
        <div class="var-input-box__line__end"></div>
      </div>
    </label>
    <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
  </div>
</div>
<div class="app-type">自定义图标</div>
<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"><i class="var-icon var-icon--set var-icon-plus prepend-icon" style="transition-duration: 0ms;"></i></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-chevron-down" style="transition-duration: 300ms;"></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
      </div>
      <div class="var-input-box__icon"><i class="var-icon var-icon--set var-icon-minus append-icon" style="transition-duration: 0ms;"></i></div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">多选</div>
<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder">请选择多个选项</div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">纸片风格的多选</div>
<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder">请选择多个选项</div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">单选值校验</div>
<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder">请选择一个选项</div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="app-type">多选值校验</div>
<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder">请选择多个选项</div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>
<div class="space"></div>"
`;

exports[`test select focus & blur methods 1`] = `
"<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller var-input-box--focus">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow var-select--arrow-rotate" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box--focus var-input-box__placeholder var-input-box--placeholder-hint"></div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot var-input-box--line-focus"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select focus & blur methods 2`] = `
"<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder"></div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select hint to be false 1`] = `
"<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon var-input-box--non-hint"></div>
      <div class="var-input-box__wrap var-input-box--wrap-non-hint">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label"><span></span></div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder var-input-box--placeholder-hidden var-input-box--placeholder-non-hint"></div>
      </div>
      <div class="var-input-box__icon var-input-box--non-hint">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select size 1`] = `
"<div class="var-input-box var-input-box--standard var-input-box--small var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder"></div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select validation 1`] = `
"<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller var-input-box--error">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select var-select--error" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box--error var-input-box__placeholder"></div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line var-input-box--line-error">
      <div class="var-input-box__dot var-input-box--line-error"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>您必须选择一个</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test select variant 1`] = `
"<div class="var-input-box var-input-box--standard var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder"></div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__dot"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select variant 2`] = `
"<div class="var-input-box var-input-box--outlined var--box var-select"><label class="var--relative var--block" for="">
    <div class="var-input-box__controller">
      <div class="var-input-box__icon"></div>
      <div class="var-input-box__wrap">
        <div class="var-select__wrap">
          <div class="var-menu var-select__menu" var-select-cover="">
            <div class="var-select__select" style="text-align: left;">
              <div class="var-select__label">
                <!--v-if-->
              </div><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
            </div>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div class="var--ellipsis var-input-box__placeholder"></div>
      </div>
      <div class="var-input-box__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-input-box__line">
      <div class="var-input-box__line__start"></div>
      <div class="var-input-box__line__notch">
        <div class="var--ellipsis var-input-box__line__placeholder"></div>
      </div>
      <div class="var-input-box__line__end"></div>
    </div>
  </label>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
